--- a/css/drawings.css
+++ b/css/drawings.css
@@ -1098,6 +1098,7 @@
   --gray1: #999;
   --gray2: #bbb;
   --gray3: #777;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
   user-select: none;
   position: absolute;
   cursor: pointer;
