--- a/css/styles.css
+++ b/css/styles.css
@@ -99,6 +99,13 @@ header > div {
   display: flex;
   gap: 0.5rem;
   flex-wrap: wrap;
+  align-items: center;
+  font-family: 'Courier New', Courier, monospace, monospace;
+}
+
+header > div:last-child a {
+  margin-left: 0.5rem;
+  color: #ccc;
 }
 
 h1 {
